swapped out bootstrap columns for grid

--- a/index.html
+++ b/index.html
@@ -24,39 +24,28 @@
 
   <!-- BOOTSTRAP CODE -->
 
-<div class="container index-container">
-  <!-- ROW 1 -->
-  <div class="row">
-    <!-- LEFT COLUMN-->
-
-    <div class="col-4 bg-primary link-parent">
-
-        <div class="index-link-container ">
-          <a class="index-link" href="all-projects.html">WORK</a>
-        </div>
-
-      <div class="index-link-container align-bottom ">
-        <a class="index-link" href="all-projects.html">ABOUT</a>
-      </div>
-
-      <div class="index-link-container align-bottom">
-        <a class="index-link" href="all-projects.html">RESUME</a>
-      </div>
-
-
-    </div>
-    <!-- RIGHT COLUMN -->
-    <div class="col-8 bg-warning">
-      <div class="index-img-container">
-        <img class="index-img" src="images\image.JPG" style="width: 100%;height: 100%;" alt="">
-
-      </div>
-      </div>
-
+<!-- holds all the content -->
+  <div class="index-content bg-primary">
+<!-- contains 1st link -->
+  <div class="index1 index-link-container bg-warning ">
+    <a class="index-link" href="all-projects.html">WORK</a>
   </div>
+<!-- contains 2nd link -->
+  <div class="index2 index-link-container bg-warning ">
+    <a class="index-link" href="all-projects.html">ABOUT</a>
+  </div>
+<!-- contains 3rd link -->
+  <div class="index3 index-link-container bg-warning">
+    <a class="index-link" href="all-projects.html">RESUME</a>
+  </div>
+<!-- contains image -->
+<div class="div4  ">
+<img class="index-img"src="images\image.JPG" alt="">
+</div>
 </div>
 
-</main>
+
+    </main>
 
 <!-- FOOTER -->
 <footer class="footer"> <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p><a href="index.html">HOMEPAGE</a> <a href="about.html">ABOUT</a> <a href="all-projects.html">WORK</a>
