swapped bootstrap for grid

--- a/about.html
+++ b/about.html
@@ -20,38 +20,31 @@
         <h2 class="title-header">Ux Researcher</h2>
       </div>
     </div>
-
     <!-- BOOTSTRAP CODE -->
 
-  <div class="container about-container">
-    <!-- ROW 1 -->
-    <div class="row">
-      <!-- ROW LEFT -->
-      <div class="col-4 bg-primary">
-        <div class="about-content bg-secondary">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-
-
-
-        </div>
-
-      </div>
-      <!-- ROW RIGHT -->
-      <div class="col-8 bg-warning">
-        <div class="index-img-container">
-          <img class="index-img" src="images\image.JPG" style="width: 100%;height: 100%;" alt="">
-
-        </div>
-        </div>
-
+    <!-- holds all the content in grid -->
+    <div class="about-content bg-primary">
+    <!-- contains 1st paragraph -->
+    <div class="about1 about-paragraph-container bg-warning "> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-  </div>
 
-</main>
+    <!-- contains 2nd paragraph -->
+    <div class="about2 about-paragraph-container bg-warning "><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
 
+    <!-- contains 3rd paragraph -->
+    <div class="about3 about-paragraph-container bg-warning"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+
+    <!-- contains image -->
+    <div class="div4  ">
+    <img class="about-img"src="images\image.JPG" alt="">
+    </div>
+    </div>
+
+
+      </main>
+    
 <!-- FOOTER -->
 <footer class="footer"> <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p><a href="index.html">HOMEPAGE</a> <a href="about.html">ABOUT</a> <a href="all-projects.html">WORK</a>
 </footer>
