changed logotype, added top nav

--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
     <link rel="stylesheet" href="css\custom.css">
   </head>
 
-  <!-- BODY CODE   -->
-  <body>
-    <main>
-    <div class="index-parent">
-      <div class="index-box1">
-        <h1 class="name-header">Elizabeth Brown</h1>
-        <h2 class="title-header">Ux Researcher</h2>
-      </div>
-    </div>
+  <!-- NAV/HEADER CODE   -->
+    <body>
+      <main>
+        <div class="row">
+          <div class="logotype col-3">
+            <h3 class="name-header">Elizabeth Brown</h3>
+            <h2 class="title-header">Ux Researcher</h2>
+          </div>
+          <div class="col-3  ">
+
+          </div>
+          <div class="col-3 ">
+
+          </div>
+          <div class="col-3 align-self-center">
+            <a href="index.html ">HOMEPAGE</a>
+            <a href="all-projects.html">WORK</a>
+            <a href="about.html">ABOUT</a>
+          </div>
+        </div>
+
 
   <!-- BOOTSTRAP CODE -->
 
