--- a/about.html
+++ b/about.html
@@ -10,16 +10,27 @@
     <link rel="stylesheet" href="css\custom.css">
   </head>
 
-<!-- BODY CODE   -->
+<!-- NAV/HEADER CODE   -->
   <body>
     <main>
-    <div class="index-parent">
-      <div class="index-box1">
-        <h1 class="name-header">Elizabeth</h1>
-        <h1 class="name-header">Brown</h1>
-        <h2 class="title-header">Ux Researcher</h2>
+      <div class="row">
+        <div class="logotype col-3">
+          <h3 class="name-header">Elizabeth Brown</h3>
+          <h2 class="title-header">Ux Researcher</h2>
+        </div>
+        <div class="col-3  ">
+
+        </div>
+        <div class="col-3 ">
+
+        </div>
+        <div class="col-3 align-self-center">
+          <a href="index.html ">HOMEPAGE</a>
+          <a href="all-projects.html">WORK</a>
+          <a href="about.html">ABOUT</a>
+        </div>
       </div>
-    </div>
+
     <!-- BOOTSTRAP CODE -->
 
     <!-- holds all the content in grid -->
@@ -44,7 +55,7 @@
 
 
       </main>
-    
+
 <!-- FOOTER -->
 <footer class="footer"> <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p><a href="index.html">HOMEPAGE</a> <a href="about.html">ABOUT</a> <a href="all-projects.html">WORK</a>
 </footer>
