--- a/all-projects.html
+++ b/all-projects.html
@@ -12,15 +12,27 @@
     <link rel="stylesheet" href="css\custom.css">
   </head>
 
-<!-- BODY CODE   -->
-<body>
-  <main>
-  <div class="index-parent">
-    <div class="index-box1">
-      <h1 class="name-header">Elizabeth Brown</h1>
-      <h2 class="title-header">Ux Researcher</h2>
-    </div>
-  </div>
+  <!-- NAV/HEADER CODE   -->
+    <body>
+      <main>
+        <div class="row">
+          <div class="logotype col-3">
+            <h3 class="name-header">Elizabeth Brown</h3>
+            <h2 class="title-header">Ux Researcher</h2>
+          </div>
+          <div class="col-3  ">
+
+          </div>
+          <div class="col-3 ">
+
+          </div>
+          <div class="col-3 align-self-center">
+            <a href="index.html ">HOMEPAGE</a>
+            <a href="all-projects.html">WORK</a>
+            <a href="about.html">ABOUT</a>
+          </div>
+        </div>
+
 
 <!-- BOOTSTRAP CODE -->
 <div class="all-project-container">
@@ -32,7 +44,7 @@
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="project-page.html" class="btn btn-primary">Project Page</a>
     </div>
   </div>
 
@@ -41,7 +53,7 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="project-page.html" class="btn btn-primary">Project Page</a>
   </div>
 
   </div>
@@ -50,7 +62,7 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="project-page.html" class="btn btn-primary">Project Page</a>
   </div>
   </div>
 
