added page headers

--- a/all-projects.html
+++ b/all-projects.html
@@ -35,6 +35,11 @@
 
 
 <!-- BOOTSTRAP CODE -->
+<!-- page title -->
+<div class="container page-header">
+  <h1>PAGE TITLE</h1>
+</div>
+
 <div class="all-project-container">
 
 
