--- a/project-page.html
+++ b/project-page.html
@@ -33,11 +33,15 @@
 
 
 <!-- BOOTSTRAP CODE -->
+<!-- page title -->
+<div class="container page-header">
+  <h1>PROJECT TITLE</h1>
+</div>
       <div class="container project-container">
         <!-- ROW 1 -->
         <div class="row">
           <div class="col-12">
-            ROW 1
+
             <div class="project-hero bg-success">
               <div class="project-hero-img-container bg-info">
               <img class="project-hero-img"src="images\peep.png" alt="">
@@ -52,7 +56,7 @@
         <!-- ROW 2 -->
         <div class="row">
           <div class="col-12">
-            ROW 2
+
             <div class="project-content bg-success">
               1ST CONTENT
               <h2>
@@ -65,7 +69,7 @@
         <!-- ROW 3 -->
         <div class="row">
           <div class="col-12 ">
-            ROW 3
+
             <div class="project-content bg-success">
               2ND CONTENT
               <h2>
@@ -78,7 +82,7 @@
         <!-- ROW 4 -->
         <div class="row">
           <div class="col-12 ">
-            ROW 4
+
             <div class="project-content bg-success">
               3RD CONTENT
               <h2>
@@ -91,7 +95,7 @@
         <!-- ROW 5 -->
         <div class="row">
           <div class="col-12 ">
-            ROW 5
+
             <div class="project-content bg-success">
               4TH CONTENT
               <h2>
@@ -104,7 +108,7 @@
         <!-- ROW 6 -->
         <div class="row">
           <div class="col-12 ">
-            ROW 6
+
             <div class="project-content bg-success">
               5TH CONTENT
               <h2>
