--- a/about.html
+++ b/about.html
@@ -32,7 +32,11 @@
       </div>
 
     <!-- BOOTSTRAP CODE -->
-
+    <!-- page title -->
+    <div class="container page-header">
+      <h1>PAGE TITLE</h1>
+    </div>
+    
     <!-- holds all the content in grid -->
     <div class="about-content bg-primary">
     <!-- contains 1st paragraph -->
