--- a/index.html
+++ b/index.html
@@ -12,49 +12,53 @@
     <link rel="stylesheet" href="css\custom.css">
   </head>
 
-  <!-- NAV/HEADER CODE   -->
+
     <body>
       <main>
-        <div class="row">
-          <div class="logotype col-3">
-            <h3 class="name-header">Elizabeth Brown</h3>
-            <h2 class="title-header">Ux Researcher</h2>
-          </div>
-          <div class="col-3  ">
 
-          </div>
-          <div class="col-3 ">
-
-          </div>
-          <div class="col-3 align-self-center">
-            <a href="index.html ">HOMEPAGE</a>
-            <a href="all-projects.html">WORK</a>
-            <a href="about.html">ABOUT</a>
-          </div>
-        </div>
 
 
   <!-- BOOTSTRAP CODE -->
 
-<!-- holds all the content -->
-  <div class="index-content bg-primary">
-<!-- contains 1st link -->
-  <div class="index1 index-link-container bg-warning ">
-    <a class="index-link" href="all-projects.html">WORK</a>
-  </div>
-<!-- contains 2nd link -->
-  <div class="index2 index-link-container bg-warning ">
-    <a class="index-link" href="all-projects.html">ABOUT</a>
-  </div>
-<!-- contains 3rd link -->
-  <div class="index3 index-link-container bg-warning">
-    <a class="index-link" href="all-projects.html">RESUME</a>
-  </div>
-<!-- contains image -->
-<div class="div4  ">
-<img class="index-img"src="images\image.JPG" alt="">
-</div>
-</div>
+      <!-- holds all the content -->
+      <div class="index-content">
+        <!-- NAV/HEADER CODE   -->
+        <div class="div-row">
+          <div class="row">
+            <div class="logotype col-4">
+              <h4 class="name-header">Elizabeth Brown</h4>
+              <h3 class="title-header">Ux Researcher</h3>
+            </div>
+            <div class="col-2  ">
+
+            </div>
+            <div class="col-3 ">
+
+            </div>
+            <div class="col-3 align-self-center">
+              <a href="index.html ">HOMEPAGE</a>
+              <a href="all-projects.html">WORK</a>
+              <a href="about.html">ABOUT</a>
+            </div>
+          </div>
+        </div>
+      <!-- contains work link -->
+        <div class="index1 index-link-container  ">
+          <a class="index-link" href="all-projects.html">WORK</a>
+        </div>
+      <!-- contains about link -->
+        <div class="index2 index-link-container  ">
+          <a class="index-link" href="all-projects.html">ABOUT</a>
+        </div>
+      <!-- contains resume link -->
+        <div class="index3 index-link-container ">
+          <a class="index-link" href="all-projects.html">RESUME</a>
+        </div>
+      <!-- contains image -->
+        <div class="index-img-div  ">
+          <img class="index-img"src="images\image.JPG" alt="">
+        </div>
+      </div>
 
 
     </main>
