swapped grid for bootrap containers, rows, and columns

--- a/index.html
+++ b/index.html
@@ -11,61 +11,59 @@
 
     <link rel="stylesheet" href="css\custom.css">
   </head>
-
-
     <body>
-      <main>
-
-
-
-  <!-- BOOTSTRAP CODE -->
-
-      <!-- holds all the content -->
-      <div class="index-content">
-        <!-- NAV/HEADER CODE   -->
-        <div class="div-row">
-          <div class="row">
-            <div class="logotype col-4">
-              <h4 class="name-header">Elizabeth Brown</h4>
-              <h3 class="title-header">Ux Researcher</h3>
-            </div>
-            <div class="col-2  ">
-
-            </div>
-            <div class="col-3 ">
-
-            </div>
-            <div class="col-3 align-self-center">
-              <a href="index.html ">HOMEPAGE</a>
-              <a href="all-projects.html">WORK</a>
-              <a href="about.html">ABOUT</a>
-            </div>
+<main>
+<!-- BOOTSTRAP CODE -->
+<!-- !! CONTAINER !! -->
+    <div class="container">
+<!-- NAV/HEADER CODE -->
+<!-- ROW 1 -->
+        <div class="row ">
+<!-- row 1 column 1 -->
+          <div class="logotype col-8">
+            <h4 class="name-header">Elizabeth Brown</h4>
+            <h3 class="title-header">Ux Researcher</h3>
+          </div>
+<!-- row 1 column 2 -->
+          <div class="col-nav-links col-4 align-self-center">
+            <a href="index.html ">HOMEPAGE</a>
+            <a href="all-projects.html">WORK</a>
+            <a href="about.html">ABOUT</a>
           </div>
         </div>
-      <!-- contains work link -->
-        <div class="index1 index-link-container  ">
-          <a class="index-link" href="all-projects.html">WORK</a>
-        </div>
-      <!-- contains about link -->
-        <div class="index2 index-link-container  ">
-          <a class="index-link" href="all-projects.html">ABOUT</a>
-        </div>
-      <!-- contains resume link -->
-        <div class="index3 index-link-container ">
-          <a class="index-link" href="all-projects.html">RESUME</a>
-        </div>
-      <!-- contains image -->
-        <div class="index-img-div  ">
-          <img class="index-img"src="images\image.JPG" alt="">
-        </div>
-      </div>
+<!-- ROW 2 -->
+        <div class="row ">
+<!-- row 2 column 1 / LINKS-->
+          <div class="col-4 row-index-links">
+<!-- LINK 1 -->
+            <div class="index-link-container  ">
+              <a class="index-link" href="all-projects.html">WORK</a>
+            </div>
+<!-- LINK 2 -->
+            <div class=" index-link-container  ">
+              <a class="index-link" href="all-projects.html">ABOUT</a>
+            </div>
+<!-- LINK 3 -->
+            <div class="index-link-container ">
+              <a class="index-link" href="all-projects.html">RESUME</a>
+            </div>
+          </div>
 
+<!-- row 2 column 2 / IMAGE -->
+          <div class="col-8">
+            <img class="index-img"src="images\image.JPG" alt="">
+          </div>
 
-    </main>
-
+    </div>
+<!-- END OF container -->
+</main>
 <!-- FOOTER -->
-<footer class="footer"> <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p><a href="index.html">HOMEPAGE</a> <a href="about.html">ABOUT</a> <a href="all-projects.html">WORK</a>
-</footer>
+  <footer class="footer">
+    <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p>
+    <a href="index.html">HOMEPAGE</a>
+    <a href="about.html">ABOUT</a>
+    <a href="all-projects.html">WORK</a>
+  </footer>
 
 <!-- SCRIPT CODE     -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
