index page now about page, redesigned layout, added logotype

--- a/index.html
+++ b/index.html
@@ -16,56 +16,57 @@
 <!-- BOOTSTRAP CODE -->
 <!-- !! CONTAINER !! -->
     <div class="container">
-<!-- NAV/HEADER CODE -->
-<!-- ROW 1 -->
-        <div class="row ">
-<!-- row 1 column 1 -->
-          <div class="logotype col-8">
-            <h4 class="name-header">Elizabeth Brown</h4>
-            <h3 class="title-header">Ux Researcher</h3>
+
+<!-- ROW 1 START -->
+      <div class="row">
+        <div class=" logotype col-md-3 mb-5">
+          <!-- <h4 class="name-header">Elizabeth Brown</h4>
+          <h3 class="title-header">Ux Researcher</h3> -->
+          <a href="index.html">
+          <img class="logotype-img" src="images\logo-type.PNG" alt=""></a>
+        </div>
+      </div>
+<!-- ROW 1 END -->
+<!-- ROW 2 START -->
+      <div class="row">
+        <div class="col-nav-links col-9 mb-4 align-self-center">
+          <a href="index.html ">ABOUT</a>
+          <a href="all-projects.html">WORK</a>
+          <a href="files\resume.PDF" target="_blank" >RESUME</a>
+        </div>
+      </div>
+<!-- ROW 2 END -->
+<!-- ROW 3 START -->
+      <div class="row">
+        <div class="col-lg-3 pr-5 col-index-text">
+          <div class="index-text-container">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
           </div>
-<!-- row 1 column 2 -->
-          <div class="col-nav-links col-4 align-self-center">
-            <a href="index.html ">HOMEPAGE</a>
-            <a href="all-projects.html">WORK</a>
-            <a href="about.html">ABOUT</a>
+          <div class="index-text-container">
+            <p> quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+          </div>
+          <div class="index-text-container">
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
-<!-- ROW 2 -->
-        <div class="row ">
-<!-- row 2 column 1 / LINKS-->
-          <div class="col-4 row-index-links">
-<!-- LINK 1 -->
-            <div class="index-link-container  ">
-              <a class="index-link" href="all-projects.html">WORK</a>
-            </div>
-<!-- LINK 2 -->
-            <div class=" index-link-container  ">
-              <a class="index-link" href="all-projects.html">ABOUT</a>
-            </div>
-<!-- LINK 3 -->
-            <div class="index-link-container ">
-              <a class="index-link" href="all-projects.html">RESUME</a>
-            </div>
-          </div>
 
-<!-- row 2 column 2 / IMAGE -->
-          <div class="col-8">
-            <img class="index-img"src="images\image.JPG" alt="">
-          </div>
-
-    </div>
-<!-- END OF container -->
+        <div class="col-lg-6">
+          <img class="index-img"src="images\image.JPG" alt="">
+        </div>
+      </div>
+<!-- ROW 3 END -->
+<!-- END OF MAIN -->
 </main>
 <!-- FOOTER -->
   <footer class="footer">
     <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p>
-    <a href="index.html">HOMEPAGE</a>
-    <a href="about.html">ABOUT</a>
+    <a href="index.html">ABOUT</a>
     <a href="all-projects.html">WORK</a>
+    <a href="files\resume.PDF" target="_blank" >RESUME</a>
   </footer>
+<!-- END OF FOOTER -->
 
-<!-- SCRIPT CODE     -->
+<!-- SCRIPT CODE -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
