--- a/all-projects.html
+++ b/all-projects.html
@@ -49,7 +49,7 @@
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="project-page.html" class="btn btn-primary">Project Page</a>
+      <a href="project-page.html" class="btn btn-primary">Project 1 Page</a>
     </div>
   </div>
 
@@ -58,7 +58,7 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="project-page.html" class="btn btn-primary">Project Page</a>
+    <a href="project-page0.html" class="btn btn-primary">Project 2 Page</a>
   </div>
 
   </div>
@@ -67,7 +67,7 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="project-page.html" class="btn btn-primary">Project Page</a>
+    <a href="project-page1.html" class="btn btn-primary">Project 3 Page</a>
   </div>
   </div>
 
@@ -78,8 +78,12 @@
 </main>
 
 <!-- FOOTER -->
-<footer class="footer"> <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p><a href="index.html">HOMEPAGE</a> <a href="about.html">ABOUT</a> <a href="all-projects.html">WORK</a>
-</footer>
+  <footer class="footer">
+    <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p>
+    <a href="index.html">HOMEPAGE</a>
+    <a href="about.html">ABOUT</a>
+    <a href="all-projects.html">WORK</a>
+  </footer>
 
 <!-- SCRIPT CODE     -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
