saving for the night; working on cleaning up layout

--- a/all-projects.html
+++ b/all-projects.html
@@ -5,87 +5,104 @@
     <title></title>
 
     <link rel="images" href="images">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css\custom.css">
   </head>
-
-  <!-- NAV/HEADER CODE   -->
     <body>
-      <main>
+<main>
+<!-- BOOTSTRAP CODE -->
+<!-- !! CONTAINER !! -->
+    <div class="container">
+
+<!-- ROW 1 START -->
+<!-- LOGOTYPE -->
+      <div class="row">
+        <div class=" logotype col-md-3 mb-5">
+          <!-- <h4 class="name-header">Elizabeth Brown</h4>
+          <h3 class="title-header">Ux Researcher</h3> -->
+          <a href="index.html">
+          <img class="logotype-img" src="images\logo-type-alt.PNG" alt=""></a>
+        </div>
+      </div>
+<!-- ROW 1 END -->
+<!-- ROW 2 START -->
+<!-- NAV -->
+      <div class="row nav-bar">
+        <div class="col-nav-links col-9 mb-4 ">
+          <a href="index.html ">ABOUT</a>
+          <a href="all-projects.html">WORK</a>
+          <a href="files\resume.PDF" target="_blank" >RESUME</a>
+        </div>
+      </div>
+<!-- ROW 2 END -->
+<!-- ROW 3 START -->
+
         <div class="row">
-          <div class="logotype col-3">
-            <h3 class="name-header">Elizabeth Brown</h3>
-            <h2 class="title-header">Ux Researcher</h2>
-          </div>
-          <div class="col-3  ">
 
-          </div>
-          <div class="col-3 ">
 
+          <div class="col-lg-3 pr-5 col-index-text">
+            <div class="index-text-container">
+              <h1>Monotype</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+
+            </div>
           </div>
-          <div class="col-3 align-self-center">
-            <a href="index.html ">HOMEPAGE</a>
-            <a href="all-projects.html">WORK</a>
-            <a href="about.html">ABOUT</a>
+
+        <div class="col-lg-6">
+          <img class="index-img"src="images\mono-img.png" alt="">
+        </div>
+
+      </div>
+      
+
+
+
+<!-- ROW 3 END -->
+<!-- ROW 4 START -->
+      <div class="row">
+        <div class="col-lg-3 pr-5 col-index-text">
+          <div class="index-text-container">
+            <h1>Design Consultancy</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+
           </div>
         </div>
 
+        <div class="col-lg-6">
+          <img class="index-img"src="images\image.JPG" alt="">
+        </div>
+      </div>
+<!-- ROW 4 END -->
+<!-- ROW 5 START -->
+      <div class="row">
+        <div class="col-lg-3 pr-5 col-index-text">
+          <div class="index-text-container">
+            <h1>User Testing Program</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 
-<!-- BOOTSTRAP CODE -->
-<!-- page title -->
-<div class="container page-header">
-  <h1>PAGE TITLE</h1>
-</div>
+          </div>
+        </div>
 
-<div class="all-project-container">
-
-
-  <div class="card-deck">
-    <div class="card" style="width: 18rem;">
-    <img src="images\peep.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="project-page.html" class="btn btn-primary">Project 1 Page</a>
-    </div>
-  </div>
-
-  <div class="card" style="width: 18rem;">
-  <img src="images\peep.png" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="project-page0.html" class="btn btn-primary">Project 2 Page</a>
-  </div>
-
-  </div>
-  <div class="card" style="width: 18rem;">
-  <img src="images\peep.png" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="project-page1.html" class="btn btn-primary">Project 3 Page</a>
-  </div>
-  </div>
-
-  </div>
-</div>
-
-
+        <div class="col-lg-6">
+          <img class="index-img"src="images\image.JPG" alt="">
+        </div>
+      </div>
+<!-- ROW 5 END -->
+<!-- END OF MAIN -->
 </main>
-
 <!-- FOOTER -->
   <footer class="footer">
     <p>footer! FOOOOOOOOOOTTTTTTTTERRERERERERERERE! YES!</p>
-    <a href="index.html">HOMEPAGE</a>
-    <a href="about.html">ABOUT</a>
+    <a href="index.html">ABOUT</a>
     <a href="all-projects.html">WORK</a>
+    <a href="files\resume.PDF" target="_blank" >RESUME</a>
   </footer>
+<!-- END OF FOOTER -->
 
-<!-- SCRIPT CODE     -->
+<!-- SCRIPT CODE -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
