--- a/index.html
+++ b/index.html
@@ -18,35 +18,31 @@
     <div class="container">
 
 <!-- ROW 1 START -->
-      <div class="row">
-        <div class=" logotype col-md-3 mb-5">
-          <!-- <h4 class="name-header">Elizabeth Brown</h4>
-          <h3 class="title-header">Ux Researcher</h3> -->
-          <a href="index.html">
-          <img class="logotype-img" src="images\logo-type.PNG" alt=""></a>
-        </div>
-      </div>
+<!-- LOGOTYPE -->
+            <div class="row">
+              <div class=" logotype col-md-3 mb-5">
+                <a href="index.html">
+                <img class="logotype-img" src="images\logo-type-alt.PNG" alt=""></a>
+              </div>
+            </div>
 <!-- ROW 1 END -->
 <!-- ROW 2 START -->
-      <div class="row">
-        <div class="col-nav-links col-9 mb-4 align-self-center">
-          <a href="index.html ">ABOUT</a>
-          <a href="all-projects.html">WORK</a>
-          <a href="files\resume.PDF" target="_blank" >RESUME</a>
-        </div>
-      </div>
+<!-- NAV -->
+            <div class="row nav-bar">
+              <div class="col-nav-links col-9 mb-4 ">
+                <a href="index.html ">ABOUT</a>
+                <a href="all-projects.html">WORK</a>
+                <a href="files\resume.PDF" target="_blank" >RESUME</a>
+              </div>
+            </div>
 <!-- ROW 2 END -->
 <!-- ROW 3 START -->
-      <div class="row">
+      <div class="row row-content">
         <div class="col-lg-3 pr-5 col-index-text">
           <div class="index-text-container">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-          </div>
-          <div class="index-text-container">
-            <p> quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-          </div>
-          <div class="index-text-container">
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h1>Sup.</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+
           </div>
         </div>
 
