--- a/project-page.html
+++ b/project-page.html
@@ -35,7 +35,7 @@
 <!-- BOOTSTRAP CODE -->
 <!-- page title -->
 <div class="container page-header">
-  <h1>PROJECT TITLE</h1>
+  <h1>PROJECT 1 TITLE</h1>
 </div>
       <div class="container project-container">
         <!-- ROW 1 -->
