added images, cleaned up code

--- a/all-projects.html
+++ b/all-projects.html
@@ -21,8 +21,6 @@
 <!-- LOGOTYPE -->
       <div class="row">
         <div class=" logotype col-md-3 mb-5">
-          <!-- <h4 class="name-header">Elizabeth Brown</h4>
-          <h3 class="title-header">Ux Researcher</h3> -->
           <a href="index.html">
           <img class="logotype-img" src="images\logo-type-alt.PNG" alt=""></a>
         </div>
@@ -39,55 +37,43 @@
       </div>
 <!-- ROW 2 END -->
 <!-- ROW 3 START -->
-
         <div class="row">
-
-
-          <div class="col-lg-3 pr-5 col-index-text">
-            <div class="index-text-container">
+          <div class="col-lg-5 pr-5 col-all-project-text">
+            <div class="all-project-text-container">
               <h1>Monotype</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
-
         <div class="col-lg-6">
-          <img class="index-img"src="images\mono-img.png" alt="">
+            <img class="all-project-img"src="images\mono-img.png" alt="">
         </div>
-
       </div>
-      
-
-
-
 <!-- ROW 3 END -->
 <!-- ROW 4 START -->
       <div class="row">
-        <div class="col-lg-3 pr-5 col-index-text">
-          <div class="index-text-container">
+        <div class="col-lg-5 pr-5 col-all-project-text">
+          <div class="all-project-text-container">
             <h1>Design Consultancy</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
           </div>
         </div>
-
         <div class="col-lg-6">
-          <img class="index-img"src="images\image.JPG" alt="">
+          <img class="all-project-img"src="images\udc-img.png" alt="">
         </div>
       </div>
 <!-- ROW 4 END -->
 <!-- ROW 5 START -->
       <div class="row">
-        <div class="col-lg-3 pr-5 col-index-text">
-          <div class="index-text-container">
+        <div class="col-lg-5 pr-5 col-all-project-text">
+          <div class="all-project-text-container">
             <h1>User Testing Program</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 
           </div>
         </div>
 
         <div class="col-lg-6">
-          <img class="index-img"src="images\image.JPG" alt="">
+          <img class="all-project-img"src="images\cut-img.png" alt="">
         </div>
       </div>
 <!-- ROW 5 END -->
@@ -101,7 +87,6 @@
     <a href="files\resume.PDF" target="_blank" >RESUME</a>
   </footer>
 <!-- END OF FOOTER -->
-
 <!-- SCRIPT CODE -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
