--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <!-- ROW 2 END -->
 <!-- ROW 3 START -->
       <div class="row row-content">
-        <div class="col-lg-3 pr-5 col-index-text">
+        <div class="col-lg-5 pr-5 col-index-text">
           <div class="index-text-container">
-            <h1>Sup.</h1>
+            <h1>Alright, Sup.</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 
           </div>
