added boarders--gradient, consolidated nav, now tab acessible, tweaked rows

--- a/index.html
+++ b/index.html
@@ -18,24 +18,29 @@
     <div class="container">
 
 <!-- ROW 1 START -->
-<!-- LOGOTYPE -->
-            <div class="row">
-              <div class=" logotype col-md-3 mb-5">
-                <a href="index.html">
-                <img class="logotype-img" src="images\logo-type-alt.PNG" alt=""></a>
-              </div>
-            </div>
+<!-- LOGOTYPE & NAV -->
+      <div class="row nav-bar mb-5">
+        <div class=" logotype col-md-3" tabindex="0">
+          <a href="index.html">
+          <img class="logotype-img" src="images\logo-type-alt.PNG" alt=""></a>
+        </div>
+        <div class="col-7">
+
+        </div>
+        <div class="col-nav-links col-2">
+          <div class=""tabindex="0">
+            <a class="main-nav-link" href="index.html ">ABOUT</a>
+          </div>
+          <div class=""tabindex="0">
+            <a class="main-nav-link" href="all-projects.html">WORK</a>
+          </div>
+          <div class=""tabindex="0">
+            <a class="main-nav-link" href="files\resume.PDF" target="_blank" >RESUME</a>
+          </div>
+        </div>
+      </div>
 <!-- ROW 1 END -->
-<!-- ROW 2 START -->
-<!-- NAV -->
-            <div class="row nav-bar">
-              <div class="col-nav-links col-9 mb-4 ">
-                <a href="index.html ">ABOUT</a>
-                <a href="all-projects.html">WORK</a>
-                <a href="files\resume.PDF" target="_blank" >RESUME</a>
-              </div>
-            </div>
-<!-- ROW 2 END -->
+
 <!-- ROW 3 START -->
       <div class="row row-content">
         <div class="col-lg-5 pr-5 col-index-text">
@@ -44,6 +49,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 
           </div>
+        </div>
+        <div class="col-1">
+        <!-- empty col   -->
         </div>
 
         <div class="col-lg-6">
