--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 <!-- ROW 1 START -->
 <!-- LOGOTYPE & NAV -->
-      <div class="row nav-bar mb-5">
+      <div class="row main-nav mb-5">
         <div class=" logotype col-md-3" tabindex="0">
           <a href="index.html">
-          <img class="logotype-img" src="images\logo-type-alt.PNG" alt=""></a>
+          <img class="logotype-img" src="images\logo-type-alt-3.PNG" alt=""></a>
         </div>
         <div class="col-7">
 
@@ -41,24 +41,64 @@
       </div>
 <!-- ROW 1 END -->
 
-<!-- ROW 3 START -->
-      <div class="row row-content">
+<!-- ROW 2 START -->
+      <div class="row">
         <div class="col-lg-5 pr-5 col-index-text">
           <div class="index-text-container">
-            <h1>Alright, Sup.</h1>
+            <h1>Index COPY</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 
           </div>
         </div>
         <div class="col-1">
-        <!-- empty col   -->
+        <!-- empty col/gutter -->
         </div>
 
         <div class="col-lg-6">
           <img class="index-img"src="images\image.JPG" alt="">
         </div>
       </div>
+<!-- ROW 2 END -->
+<!-- ROW 3 START -->
+      <div class="row">
+        <div class="col">
+          <div class="header-container">
+            <h2>Work</h2>
+          </div>
+        </div>
+      </div>
 <!-- ROW 3 END -->
+<!-- ROW 4 START -->
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+<!-- ROW 4 END -->
 <!-- END OF MAIN -->
 </main>
 <!-- FOOTER -->
