moved projects to index, added two rows, study, tldr

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <!-- !! CONTAINER !! -->
     <div class="container">
 
-<!-- ROW 1 START -->
-<!-- LOGOTYPE & NAV -->
+<!-- NAV/ROW 1 START -->
       <div class="row main-nav mb-5">
         <div class=" logotype col-md-3" tabindex="0">
           <a href="index.html">
@@ -39,66 +38,82 @@
           </div>
         </div>
       </div>
-<!-- ROW 1 END -->
-
-<!-- ROW 2 START -->
+<!-- NAV/ROW 1 END -->
+<!-- ABOUT/ROW 2 START -->
       <div class="row">
         <div class="col-lg-5 pr-5 col-index-text">
           <div class="index-text-container">
-            <h1>Index COPY</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p><br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-
+            <h1>Hello,</h1>
+            <p>I'm a user experience researcher and people nerd who's all about collaborative, problem-oriented research. My specialties include product development, service design, and business consulting. I'm establishing the first UX consulting service at the University of Michigan and leading a user testing program with Detroit residents. When I'm not researching or consulting, I'm sipping water and watching soap operas. Wanna chat? Email me at liz.alma.brown@gmail.com. </p>
           </div>
         </div>
         <div class="col-1">
         <!-- empty col/gutter -->
         </div>
-
+        <!-- hero image -->
         <div class="col-lg-6">
           <img class="index-img"src="images\image.JPG" alt="">
         </div>
       </div>
-<!-- ROW 2 END -->
-<!-- ROW 3 START -->
+<!-- ABOUT/ROW 2 END -->
+<!-- WORK/ROW 3 START -->
       <div class="row">
         <div class="col">
-          <div class="header-container">
             <h2>Work</h2>
+        </div>
+        <div class="w-100"></div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go moduel</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
           </div>
         </div>
       </div>
-<!-- ROW 3 END -->
-<!-- ROW 4 START -->
+<!-- WORK/ROW 3 END -->
+<!-- EDUCATION/ROW 4 START -->
       <div class="row">
-        <div class="col-sm-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+        <div class="col">
+          <h2>Study</h2>
         </div>
-        <div class="col-sm-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+        <div class="w-100"></div>
+        <div class="col">
+          <p>M.S. - Human-Computer Interaction & UX Research @ University of Michigan, April 2020</p>
+          <p>B.S. - Psychology and Africana Studies @ University of Pittsburgh, April 2014</p>
         </div>
       </div>
-<!-- ROW 4 END -->
+<!-- EDUCATION/ROW 4 END -->
+<!-- TLDR/ROW 4 START -->
+      <div class="row">
+        <div class="col">
+          <h2>TL;DR</h2>
+        </div>
+        <div class="w-100"></div>
+        <div class="col">
+          <p>I'm a UX researcher who builds enjoyable digital experiences.</p>
+        </div>
+      </div>
+<!-- TLDR/ROW 4 END -->
 <!-- END OF MAIN -->
 </main>
 <!-- FOOTER -->
